# player-id

./: .editorconfig  Cargo.toml  LICENSE  README.md  Signature_File_Format.txt  build.rs
.github/workflows/: rust.yml
config/: sidid.cfg  sidid.nfo  tedid.cfg
doc/: Signature_File_Format.txt
src/: config.rs  config_test.rs  main.rs  player_id.rs
src/player_id/: bndm.rs  bndm_test.rs  sidid.rs  signature.rs  validate.rs
src/utils/: hvsc.rs  sid_file.rs
