[package]
name = "player-id"
version = "2.0.1"
authors = ["Wilfred Bos"]
description = "Utility to identify Commodore 64 music players in SID files"
readme = "README.md"
edition = "2021"
license = "MIT"
keywords = ["player-identifier", "sidid", "playerid", "player-id", "pi"]
build = "build.rs"

[dependencies]
encoding_rs = "0.8.33"
encoding_rs_io = "0.1.7"
globwalk = "0.8.1"
rayon = "1.8.0"
str-utils = "0.1.7"
substring = "1.4.5"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[package.metadata.winres]
ProductName = "Player-ID"
LegalCopyright = "Copyright © 2012 - 2023 Wilfred Bos"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true
